--- a/components/PageHeader/PageHeader.module.scss
+++ b/components/PageHeader/PageHeader.module.scss
@@ -2,106 +2,11 @@
 
 .PageHeader {
   position: relative;
-  padding: 0 3em;
+  padding: 0 1.5em;
   padding-top: 1.5em;
-  .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    & > * {
-      // height: 48px;
-      display: flex;
-      align-items: stretch;
-      justify-content: center;
-    }
-  
-
-    @media screen and (max-width: 675px) {
-      flex-direction: column;
-      align-items: flex-start;
-      .input {
-        max-width: none;
-        margin-bottom: 2rem;
-      }
-    }
-  }
-  
-  .drop_down {
-    position: relative;
-    filter: none !important;
-    width: 100%;
-    max-width: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border: none;
-    outline: none;
-    background-image: linear-gradient(216deg, hsla(33, 0%, 100%, 0.62), hsla(33, 0%, 100%, 1));
-    box-shadow: 0 3px 10px 0 rgba(99, 118, 129, 0.3);
-    position: relative;
-    z-index: 2;
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
-    // height: 3em;
-    cursor: pointer;
-    font-size: 1.4rem;
-    .title {
-      display: flex;
-      align-items: center;
-      font-size: 1.2rem;
-    }
-    .drop_down_menu {
-      position: absolute;
-      background-image: linear-gradient(216deg, hsla(33, 0%, 100%, 0.72), hsla(33, 0%, 100%, 1));
-      box-shadow: 0 3px 10px 0 rgba(99, 118, 129, 0.3);
-      top: 100%;
-      left: 0em;
-      right: 0;
-      width: 100%;
-      z-index: -1;
-      transform: translateY(-20px);
-      user-select: none;
-      pointer-events: none;
-      opacity: 0;
-      max-height: 0;
-      margin: 0;
-      margin: 0;
-      list-style: none;
-      padding: 0 !important;
-  
-      .option {
-        padding: .75em;
-        border-bottom: 1px solid color('dark',0.5);
-        // border-radius: inherit;
-        text-align: left;
-        &:hover {
-          background-color: color('red',0.5);
-          color: color(white) !important;
-        }
-        &.remove {
-          background-color: color('red');
-          color: #fff;
-          &:hover {
-            filter: brightness(1.1);
-          }
-        }
-        &:last-child {
-          border: none;
-        }
-      }
-    }
-  
-    &:focus-within .drop_down_menu {
-      transform: none;
-      user-select: auto;
-      pointer-events: visible;
-      padding: 0.5rem 1rem;
-      opacity: 1;
-      max-height: none;
-    }
-    svg {
-      transform: rotate(180deg);
-    }
+  padding-bottom: 1.5em;
+  @media #{$desktop} {
+    padding: 0 3em;
   }
 }
 
@@ -115,18 +20,21 @@
 
   h3 {
     font-weight: 500;
-    font-size: 2.6rem;
+    font-size: 2rem;
     margin-bottom: .75em;
     color: color('white');
 
     @media #{$tablet} {
-      text-align: start;
+      font-size: 2.6rem;
     }
   }
 
   .categoryTags {
     @media #{$only-phone} {
       justify-content: center;
+      // flex-flow: nowrap;
+      // overflow: scroll !important;
+      // scroll-snap-type: x mandatory !important;
     }
 
     a {
@@ -148,7 +56,10 @@
 .sortSelect {
   user-select: none;
   position: relative;
-  min-width: 8em;
+  @media #{$tablet} {
+    min-width: 8em;
+
+  }
 
   select {
     display: block;
