--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -9,12 +9,16 @@
   position: relative;
   overflow: hidden;
   justify-content: center;
+  padding-top: 1.8em;
+  margin-top: 1.8em;
+  @media #{$desktop} {
   padding-top: 3em;
   margin-top: 3em;
+  }
 }
 
 .PageCountryIndexContent {
-  padding:  2.5em;
+  padding:  1.5em;
   grid-gap: 2.5em;
   display: grid;
   grid-template-columns: repeat(1,1fr);
@@ -22,10 +26,11 @@
     padding-top: 0.5em;
   }
   @media #{$tablet} {
+    padding:  2em;
+    grid-gap: 2em;
     grid-template-columns: repeat(2,1fr);
   }
   @media #{$desktop} {
-    grid-gap: 2em;
     grid-template-columns: repeat(3,1fr);
   }
   @media #{$desktop-md} {
