--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -81,8 +81,11 @@ p {
   background-color: color('dark', .75);
   color: color('white');
 }
-
 body {
+  background-color: color('white');
+}
+
+main {
   position: relative;
   background-image: linear-gradient(191.92deg, #000428 8.61%, #757DBE 192.04%);
   
@@ -118,10 +121,10 @@ body {
     backface-visibility: hidden;
     opacity: .5;
 
-    @media #{$only-phone} {
-      margin-top: -12em;
-      background-size: auto 100vh;
-    }
+    // @media #{$only-phone} {
+    //   margin-top: -12em;
+    //   background-size: auto 100vh;
+    // }
 
     @media #{$tablet} {
       animation-duration: 96s;
