--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -85,7 +85,7 @@ body {
   background-color: color('white');
 }
 
-main {
+body {
   position: relative;
   background-image: linear-gradient(191.92deg, #000428 8.61%, #757DBE 192.04%);
   
