--- a/styles/SingleCountry.module.scss
+++ b/styles/SingleCountry.module.scss
@@ -102,7 +102,6 @@
   // background-color: color('white');
   border: 2px solid color('white', 0.4);
   background-image: linear-gradient(129.6deg, #000428 3.34%, #3D51FF 114.07%);
-
   color: color('white');
   border-radius: 100px;
   cursor: pointer;
@@ -110,7 +109,10 @@
   min-width: 7em;
   transition: box-shadow 0.25s cubic-bezier(0.32, 0.01, 0, 1);
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-
+  @media #{$only-phone} {
+    min-width: 4em;
+    font-size: 1.8rem;
+  }
   &.disabled,
   &[disabled] {
     opacity: .5;
@@ -227,7 +229,7 @@
   flex-direction: column;
 
   h2 {
-    font-size: 3rem;
+    font-size: 2.8rem;
     padding: .35em 0;
 
     @media #{$desktop-md} {
